Add icon to new button.

--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -288,3 +288,10 @@
 .icon-bbb-closed_caption:before {
   content: "\e957";
 }
+/*\e958 -> icon-bbb-alert*/
+.icon-bbb-palm_rejection:before {
+  content: "\e959";
+}
+.icon-bbb-no_palm_rejection:before {
+  content: "\e95a";
+}
